# fastapi-setup-test

./: README.md  pyproject.toml
fastapi_setup_test/app/: launch.py  main.py
fastapi_setup_test/app/routes/: hello_world.py
