[project]
name = "fastapi_setup_test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "python-json-logger>=3.0.0",
    "starlette-context<1.0.0,>=0.3.4",
    "orjson<4.0.0,>=3.10.5",
    "uvicorn[standard]==0.30.1",
    "httptools==0.6.1",
    "fastapi>=0.111.1",
    "fastapi-pagination>=0.12.27",
    "pydantic<3.0.0,>=2.8.2",
    "pydantic-settings<3.0.0,>=2.3.4",
    "httpx>=0.28.1",
]

[project.scripts]
start = "fastapi_setup_test.app.launch:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
